<resources>
    <string name="app_name">Layer Zero</string>
    <string name="edit_message_description">Brief Description of the Experience</string>
    <string name="response_here">Write Your Response</string>
    <string name="next">Next</string>
    <string name="Create_Your_Reflection_Log">Create Your Reflection Log</string>
    <string name="Sensory">Sensory Significance</string>
    <string name="Emotional">Emotional Significance</string>
    <string name="Intellectual">Intellectual Significance</string>
    <string name="share_thoughts">Share Your Thoughts</string>
    <string name="Lorem">Lorem ipsum </string>
    <string name="hello_here_are_your_reflections">Hello Pelin, here are your reflections.</string>
    <string name="layer_zero">Layer Zero</string>
    <string name="ar_view">AR VIEW</string>
    <string name="client_id">1383712118489523</string>
    <string name="callback_url">https://instagram.com/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="get_user_info_url">https://api.instagram.com/v1/users/self/?access_token=</string>
    <string name="s">S</string>
    <string name="action_sign_in">Login with Instagram</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>

    <string name="loginFailed">Login Failed!</string>

    <string name="fillMissingInformation">Please fill missing information!</string>



    <!-- BOARDING PAGE CONTENT-->
    <string name="boardingTitle1">Reflection Logs</string>
    <string name="boardingTitle2">Brief Description</string>
    <string name="boardingTitle3">Aspects</string>
    <string name="boardingTitleLast">Visit Your\nReflection Logs</string>
    <string name="intellectual_divided">Intellectual\nSignificance</string>

    <string name="boardingDesc1">\nLayer Zero App is a self reflection
tool that encourages you to
fill reflection logs.\n\n

Reflection logs are  mini surveys
with open ended questions.\n\n

They are designed to make you
think deeper on your experience
of sharing on social media. </string>
    <string name="boardingDesc2">\nThe first question of the
reflection log asks you for a
brief description of the experience.\n\n

Think of it like a journal.
Write down whatever you like.
Just share your thoughts either on
the experience of sharing or
experience of the content.</string>
    <string name="boarding_desc3">\nFollowing, reflection log includes
questions for three different aspects
of the experience you just described:
sensory, emotional, intellectual.\n\n

Here is a place for you to think deeper.
Take a breath. Take a new perspective.</string>
    <string name="sensoryDesc">\nThink about your experience from
a sensory perspective.
Rate the effect of sensory input on
your experience and add your comments.\n\n

Think about not just  what you saw, but also
about what you heard, touched, smelt,
and tasted.</string>
    <string name="emotionalDesc">\nThink about your experience from
an emotional perspective.
Rate the effect of emotional input on
your experience and add your comments.\n\n

Think about your feelings, dig  even deeper.</string>
    <string name="intellectualDesc">
        \nThink about your experience
from an intellectual perspective.
Rate the effect of intellectual input on
your experience and add your comments..\n\n

Think about thoughts.
    </string>
    <string name="boardingDescLast">
        \nOpen your Layer Zero App to
revisit your reflections about
your experiences on social media.\n\n

You can use AROUND ME tab to
explore your past reflections
around your current location.\n\n

Visualizations you see on
your gallery are generated
based on your ratings to
give you an overview.\n\n

Enjoy your experience!
    </string>


</resources>
