<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f1fa"
    tools:context=".emotionalActivity">

    <ImageButton
        android:id="@+id/buttonClose"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:background="#f0f1fa"
        android:src="@drawable/ic_clear_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/createReflectionLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createReflectionLog" />

    <TextView
        android:id="@+id/createReflectionLog"
        android:layout_width="291dp"
        android:layout_height="33dp"
        android:layout_marginTop="16dp"
        android:text="Create Your Reflection Log"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emotionalSignificance"
        android:layout_width="208dp"
        android:layout_height="28dp"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/Emotional"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createReflectionLog" />

    <EditText
        android:id="@+id/emotionalResponse"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="100dp"
        android:background="#ffffff"
        android:ems="10"
        android:hint="@string/response_here"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/shareThoughts"
        app:layout_constraintTop_toBottomOf="@id/shareThoughts" />

    <TextView
        android:id="@+id/shareThoughts"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Share your thoughts on emotional significance"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/emotionalSeekbar"
        app:layout_constraintTop_toBottomOf="@id/emotionalSeekbar" />

    <Button
        android:id="@+id/emotionalNext"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emotionalResponse" />

    <TextView
        android:id="@+id/limit3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="500 characters"
        app:layout_constraintEnd_toEndOf="@id/emotionalResponse"
        app:layout_constraintTop_toBottomOf="@id/emotionalResponse" />

    <SeekBar
        android:id="@+id/emotionalSeekbar"
        android:layout_width="353dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:indeterminate="false"
        android:max="5"
        android:progress="1"
        app:layout_constraintStart_toStartOf="@id/emotionalSignificance"
        app:layout_constraintTop_toBottomOf="@id/emotionalSignificance" />

</androidx.constraintlayout.widget.ConstraintLayout>